[project]
name = "pytest-tips-and-tricks"
version = "0.1.0"
description = "Pytest Tips & Tricks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cookiecutter>=2.7.1",
    "hypothesis>=6.152.1",
    "ipykernel>=7.2.0",
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpserver>=1.1.5",
    "pytest-instafail>=0.5.0",
    "pytest-md>=0.2.0",
    "pytest-mock>=3.15.1",
    "pytest-recording>=0.13.4",
    "pytest-reportlog>=1.0.0",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "responses>=0.26.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
reportUnnecessaryComparison = true
# or "standard" or "strict"
typeCheckingMode = "basic"
